Further coverage report cleanup

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            height: 90vh;
         }
         .wrapper div {
             margin: 0.2em;
@@ -77,6 +77,19 @@
             line-height: 48px; /* Adjust line height to vertically center the text */
             text-align: center; /* Center the text horizontally */
         }
+        footer {
+            height: 8vh;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+        footer p {
+            color: #36395A;
+            font-size: .8rem;
+            margin: 0 auto;
+            text-align: center;
+        }
         </style>
 </head>
 <body>
@@ -88,5 +101,8 @@
             <a href="./coverage/index.html">Coverage Report</a>
         </div>
     </div>
+    <footer>
+        <p id="timestamp">2023-11-15 16:32 -0500</p>
+    </footer>
 </body>
 </html>
